//! Query engine integration for connecting gRPC queries to the actual query engine

use chrono::Utc;
use std::collections::HashMap;
use std::time::Duration;
use uuid::Uuid;

use bridge_core::{
    traits::{QueryResultStatus, TelemetryQueryResult},
    types::{TelemetryData, TelemetryQuery, TelemetryRecord, TelemetryType},
    BridgeResult,
};

// Temporarily disabled due to dependency conflicts
// use query_engine::{
//     QueryParser, ParsedQuery, QueryAst, QueryExecutor, QueryResult as EngineQueryResult,
//     ExecutionEngine, ExecutorFactory, ExecutorConfig
// };

use crate::{config::BridgeAPIConfig, metrics::ApiMetrics};

/// Query engine integration service
pub struct QueryEngineIntegration {
    config: BridgeAPIConfig,
    metrics: ApiMetrics,
    // Temporarily disabled due to dependency conflicts
    // execution_engine: Arc<ExecutionEngine>,
    // query_parser: QueryParser,
}

impl QueryEngineIntegration {
    /// Create a new query engine integration service
    pub async fn new(config: BridgeAPIConfig, metrics: ApiMetrics) -> BridgeResult<Self> {
        // Temporarily disabled due to dependency conflicts
        // Create execution engine
        // let mut execution_engine = ExecutionEngine::new();

        // Create and register DataFusion executor
        // let datafusion_config = query_engine::executors::datafusion_executor::DataFusionConfig::new();
        // let mut datafusion_executor = query_engine::executors::datafusion_executor::DataFusionExecutor::new(datafusion_config);
        // datafusion_executor.init().await?;

        // execution_engine.add_executor("datafusion".to_string(), Box::new(datafusion_executor));

        // Create query parser
        // let query_parser = QueryParser::new();

        Ok(Self {
            config,
            metrics,
            // execution_engine: Arc::new(execution_engine),
            // query_parser,
        })
    }

    /// Execute a telemetry query using the query engine
    pub async fn execute_query(
        &self,
        telemetry_query: &TelemetryQuery,
    ) -> BridgeResult<TelemetryQueryResult> {
        // Temporarily disabled due to dependency conflicts
        // let start_time = Instant::now();

        // tracing::info!("Executing telemetry query: {:?}", telemetry_query.id);

        // Convert telemetry query to SQL
        // let sql_query = self.convert_telemetry_query_to_sql(telemetry_query)?;

        // Parse the SQL query
        // let parsed_query = self.query_parser.parse(&sql_query).await?;

        // Execute the query using the execution engine
        // let engine_result = self.execution_engine.execute_query("datafusion", parsed_query).await?;

        // Convert engine result to telemetry query result
        // let telemetry_result = self.convert_engine_result_to_telemetry_result(
        //     engine_result,
        //     telemetry_query,
        //     start_time.elapsed(),
        // )?;

        // Record metrics
        // self.metrics.record_processing("query_engine_execution", start_time.elapsed(), true);

        // tracing::info!("Query execution completed in {:?}", start_time.elapsed());

        // Ok(telemetry_result)

        // For now, return a mock result
        Ok(TelemetryQueryResult {
            query_id: telemetry_query.id,
            timestamp: Utc::now(),
            status: QueryResultStatus::Success,
            data: serde_json::Value::Null,
            metadata: HashMap::new(),
            errors: Vec::new(),
        })
    }

    /// Convert telemetry query to SQL
    fn convert_telemetry_query_to_sql(&self, query: &TelemetryQuery) -> BridgeResult<String> {
        // Determine the table name based on query type
        let table_name = self.determine_table_name(query)?;

        // Build SELECT clause
        let mut sql = format!("SELECT * FROM {}", table_name);

        // Add WHERE clause for time range
        let start_time = query.time_range.start.timestamp();
        let end_time = query.time_range.end.timestamp();
        sql.push_str(&format!(
            " WHERE timestamp >= {} AND timestamp <= {}",
            start_time, end_time
        ));

        // Add filters
        if !query.filters.is_empty() {
            let filter_conditions: Vec<String> = query
                .filters
                .iter()
                .map(|filter| {
                    let operator_str = match filter.operator {
                        bridge_core::types::FilterOperator::Equals => "eq",
                        bridge_core::types::FilterOperator::NotEquals => "ne",
                        bridge_core::types::FilterOperator::GreaterThan => "gt",
                        bridge_core::types::FilterOperator::LessThan => "lt",
                        bridge_core::types::FilterOperator::GreaterThanOrEqual => "gte",
                        bridge_core::types::FilterOperator::LessThanOrEqual => "lte",
                        bridge_core::types::FilterOperator::Contains => "contains",
                        // bridge_core::types::FilterOperator::Regex => "regex", // TODO: Add regex support
                        _ => "eq", // Default to equals for other operators // TODO: Add support for other operators
                    };

                    match operator_str {
                        "eq" => format!("{} = '{:?}'", filter.field, filter.value),
                        "ne" => format!("{} != '{:?}'", filter.field, filter.value),
                        "gt" => format!("{} > '{:?}'", filter.field, filter.value),
                        "lt" => format!("{} < '{:?}'", filter.field, filter.value),
                        "gte" => format!("{} >= '{:?}'", filter.field, filter.value),
                        "lte" => format!("{} <= '{:?}'", filter.field, filter.value),
                        "contains" => format!("{} LIKE '%{:?}%'", filter.field, filter.value),
                        "regex" => format!("{} REGEXP '{:?}'", filter.field, filter.value),
                        _ => format!("{} = '{:?}'", filter.field, filter.value),
                    }
                })
                .collect();

            if !filter_conditions.is_empty() {
                let filter_clause = filter_conditions.join(" AND ");
                if sql.contains("WHERE") {
                    sql.push_str(&format!(" AND {}", filter_clause));
                } else {
                    sql.push_str(&format!(" WHERE {}", filter_clause));
                }
            }
        }

        // Add ORDER BY
        sql.push_str(" ORDER BY timestamp DESC");

        // Add LIMIT
        if let Some(limit) = query.limit {
            sql.push_str(&format!(" LIMIT {}", limit));
        }

        tracing::debug!("Generated SQL query: {}", sql);

        Ok(sql)
    }

    /// Determine table name based on query type
    fn determine_table_name(&self, query: &TelemetryQuery) -> BridgeResult<String> {
        // Check filters for type information
        for filter in &query.filters {
            if filter.field == "type" || filter.field == "record_type" {
                return Ok(format!("telemetry_{:?}", filter.value));
            }
        }

        // Check metadata for type information
        if let Some(query_type) = query.metadata.get("type") {
            return Ok(format!("telemetry_{}", query_type));
        }

        // Default to generic telemetry table
        Ok("telemetry".to_string())
    }

    /// Convert engine query result to telemetry query result
    fn convert_engine_result_to_telemetry_result(
        &self,
        _engine_result: (),
        original_query: &TelemetryQuery,
        execution_time: Duration,
    ) -> BridgeResult<TelemetryQueryResult> {
        // Temporarily disabled due to dependency conflicts
        let telemetry_records: Vec<TelemetryRecord> = Vec::new();
        let rows_returned = telemetry_records.len();
        let data = serde_json::to_value(telemetry_records)?;
        let status = QueryResultStatus::Success;
        let errors = Vec::new();

        Ok(TelemetryQueryResult {
            query_id: original_query.id,
            timestamp: Utc::now(),
            status,
            data,
            metadata: HashMap::from([
                (
                    "execution_time_ms".to_string(),
                    execution_time.as_millis().to_string(),
                ),
                ("rows_returned".to_string(), rows_returned.to_string()),
                ("query_engine".to_string(), "datafusion".to_string()),
            ]),
            errors,
        })
    }

    /// Convert query row to telemetry record
    fn convert_query_row_to_telemetry_record(&self, _row: &()) -> TelemetryRecord {
        // Temporarily disabled due to dependency conflicts
        let id = Uuid::new_v4();
        let timestamp = Utc::now();
        let record_type = TelemetryType::Metric;
        let data = TelemetryData::Metric(bridge_core::types::MetricData {
            name: "default_metric".to_string(),
            description: None,
            unit: None,
            metric_type: bridge_core::types::MetricType::Counter,
            value: bridge_core::types::MetricValue::Counter(0.0),
            labels: HashMap::new(),
            timestamp: Utc::now(),
        });
        let attributes = HashMap::new();

        TelemetryRecord {
            id,
            timestamp,
            record_type,
            data,
            attributes,
            tags: HashMap::new(),
            resource: None,
            service: None,
        }
    }

    /// Get query engine statistics
    pub async fn get_stats(&self) -> BridgeResult<HashMap<String, ()>> {
        // Temporarily disabled due to dependency conflicts
        Ok(HashMap::new())
    }

    /// Check if query engine is healthy
    pub async fn health_check(&self) -> BridgeResult<bool> {
        // Temporarily disabled due to dependency conflicts
        Ok(true)
    }
}
